--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
   </section>
 
   <footer>
-    Need a sharable link? See <a href="https://world-time-sync.com" target="_blank" rel="noopener">time zone converter: convert past, present, and future local times between time zones</a>.
+    Need a shareable link? See <a href="https://world-time-sync.com" target="_blank" rel="noopener">time zone converter: convert past, present, and future local times between time zones</a>.
   </footer>
   <script>
     (function(){
